--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -97,7 +97,7 @@ span{
     .header-menu{
         width: 100%;
         height: 100vh;
-        background: var(--color-font4);
+        background: var(--gradient);
         position: absolute;
         z-index:1;
         top:0;
@@ -107,6 +107,9 @@ span{
         flex-direction: column;
         justify-content: center;
         transition: .5s;
+    }
+    .item-menu{
+        color: var(--color-font1);
     }
     #titulo{
         font-size: 2rem;
@@ -128,4 +131,4 @@ span{
     .hamburguer.active .barra:last-child{
         transform:translateY(-8px) rotate(-360deg) rotate(-45deg);
     }
-    }    
+}    
